Редактирование моедли CodeFirst

--- a/ConfiguratorApp/Web.config
+++ b/ConfiguratorApp/Web.config
@@ -54,6 +54,7 @@
   </system.codedom>
   <connectionStrings>
     <add name="masterEntities" connectionString="metadata=res://*/DBModel.ConfiguratorDBModel.csdl|res://*/DBModel.ConfiguratorDBModel.ssdl|res://*/DBModel.ConfiguratorDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ConfiguratorDataModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=ConfiguratorApp.Models.EFDataModel.ConfiguratorDataModel;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
