--- a/ConfiguratorApp/ConfiguratorApp.csproj
+++ b/ConfiguratorApp/ConfiguratorApp.csproj
@@ -1061,8 +1061,11 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\SetupScript.js" />
     <Content Include="Scripts\TmpScript.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="Views\HtmlPage.html" />
+    <Content Include="Views\OptionsSetup.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
